public/stylesheets/style.css
html { 
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

.container	{ padding-bottom: 2em; }

@media (max-width: 320px) {
	.navbar-brand	{ font-size: 20px !important; }
	.btn	{ font-size: 12px !important; }
	.info	{ margin: 1em 0 !important; }
	.right	{ position: relative !important; }
	.bio		{ padding: 0 !important; }
}

@media (max-width: 480px) {
	.navbar .container-fluid		{ padding: 8px 20px !important; }
	.right	{ position: relative !important; }
	.bio		{ padding: 0 !important; margin: 0 !important; }
	.container-fluid						{ padding: 0 !important; }
}

@media (max-width: 768px) {
	h1								{ font-size: 32px !important; }
	.navbar .container-fluid		{ padding: 8px 20px !important; }
	.icon-action img	{ padding: 20px !important; }
	.about				{ font-size: 16px !important; }
	#about-video		{ height: 230px; }
	.top p				{ font-size: 14px; }
}

@media (max-width: 1000px) {
	.bio .left.piece,
	.bio .right.piece	{ font-size: 14px !important; }
	#about-video		{ height: 270px; }
}

@media (max-width: 1100px) {
	h1								{ font-size: 28px !important; }
}



body, #mc_embed_signup {
  font: 18px "Open Sans", Helvetica, Arial, sans-serif !important;
  color: #111 !important;
  background: #fff;
  // background: #982b2b;
  line-height: 160% !important;
  font-weight: 400 !important;
}

a 		{ color: #000; }
.action a:hover	{ text-decoration: none; cursor: pointer; }

a b	{ white-space: nowrap; }
a.silent	{ color: inherit; text-decoration: none; }

button:focus	{ outline:0 !important; }
.btn:hover		{ background-color: #adadad !important; }
.btn[disabled]	{ background-color: #982b2b !important; }
a:hover, a:focus		{ color: #982b2b; }

h1 { font-size: 48px; font-weight: 300; text-transform: uppercase; text-align: center; margin: 1em 40px; }
h2 { font-size: 24px; font-weight: 800; text-transform: uppercase; margin: 1em 0; text-align: center; }
h3 { font-size: 16px; font-weight: 800; text-transform: uppercase; text-align: left; letter-spacing: 2px; margin-top: 0; }
h4 { margin: 1em 0; }
h1 b	{ font-weight: 800; }

.about		{ font-size: 18px; margin: 20px; }
.press-item		{ margin: 1em 0; }
.press-title	{ font-style: normal; font-size: 18px; line-height: 1.2em; font-weight: 400; margin: 8px 0 0; }
.publisher		{ font-size: 11px; font-weight: 300; margin-top: 6px; }
.training .description	{ font-size: 15px; }
.instagram		{ margin: 20px; }
.testimonial	{ font-size: 16px; margin: 0 0 2em; }

.links			{ margin: 20px 0 40px; text-align: center; }
.links h2		{ display: inline; font-weight: 300; letter-spacing: 2px; padding-right: 20px; line-height: 200%; }

.info			{ margin: 40px 40px 60px; }
.btn			{ font-size: 14px; text-transform: uppercase; letter-spacing: 1px; white-space: normal; margin: 20px 0; color: #fff !important; background: #982b2b; }
.info .ban		{ text-align: center; }
.alert			{ margin-top: 20px; }

body.admin	{ background: #fff; }

.navbar				{ color: #f2f2f2 !important; margin-bottom: 0 !important; }
.navbar	a			{ color: #f2f2f2 !important; text-transform: uppercase; font-weight: 300; font-size: 24px; }
.navbar-brand		{ font-weight: 800 !important; }
.navbar .container-fluid		{ padding: 8px 40px 8px 20px; }
.navbar-default		{ border: none; }
.navbar	a:hover		{ font-weight: 800; }

.icon-bar			{ background-color: #f2f2f2 !important; }

.icon-action		{ text-align: center; }
.icon-action img	{ padding: 60px; }

.gradient-top		{ height: 10px; width: 100%; background: right top url('/images/gradient-top.gif') repeat-x; }
.gradient-bottom		{ height: 10px; width: 100%; background: right top url('/images/gradient-bottom.gif') repeat-x; }

.modal-dialog			{ overflow: hidden }
.modal-header			{ background-color: #f2f2f2; border-top-left-radius: 6px; border-top-right-radius: 6px; }
.modal-footer			{ background-color: #f2f2f2; border-bottom-left-radius: 6px; border-bottom-right-radius: 6px; }
.modal-header			{ color: #1f252a; }
.modal-header h4		{ font-weight: 700; text-transform: uppercase; color: #1f252a; }
.modal h3				{ margin: 20px; color: #5c7a99; }
.modal-footer button	{ margin: 0; font-weight: 700; text-transform: uppercase; }

label				{ font-weight: 300; color: #1f252a; font-size: 11px; text-transform: uppercase; letter-spacing: 1px; }
input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill		{ background-color: white !important; }

.comments			{ background: url('/images/red-stripes.png') no-repeat top center; padding: 42px 0; font-size: 14px; }
.comments .comment 	{ margin: 6px 0; }
.comments .name		{ font-size: 12px; margin-top: 4px; }
.comments a			{ padding-left: 40px; position: relative; font-size: 12px; }
.comments a .fa		{ position: absolute; left: 12px; }
.section .action	{ font-size: 14px; text-transform: uppercase; text-align: center; }
.fa-quote-left		{ color: #ccc; }

.bio				{ margin: 0 10%; padding: 40px 0; font-size: 16px; line-height: 180%; }
.helper			{ font-size: 14px; line-height: 140%; margin-top: 1em; }

/* FULLPAGE */
#fullpage			{ color: #1f252a; position: relative; padding-bottom: 0; }
#fullpage h1		{ font-weight: 800; margin: 0 0 6px; letter-spacing: 2px; font-size: 52px; font-style: normal; }
#fullpage .piece			{ margin: 0; }
#fullpage .location			{ margin-bottom: 1em; font-weight: 800; text-transform: uppercase; font-size: 1.2em; }
#fullpage .location a		{ text-decoration: none; }
#fullpage .location .arrow	{ line-height: 0; }
#fullpage .top.piece		{ position: absolute; top: 10%; left: 60%; width: 35%; text-align: center; font-style: italic; }
#fullpage .bottom.piece		{ position: absolute; top: 35%; left: 60%; width: 35%; text-align: center; }
#fullpage .left.piece		{ position: absolute; top: 10%; left: 10%; width: 10%; text-align: left; font-size: 4em; line-height: 1.1em; }

#fullpage .mobile h1									{ position: absolute; top: 35%; text-align: center; width: 100%; font-size: 2.3em !important; left: 0; }
.x #fullpage .mobile .social-links		{ position: absolute; top: 70%; text-align: center; width: 100%; font-size: 80px !important; left: 0; }
.x #fullpage .mobile .social					{ display: inline; }
#fullpage .mobile .locations					{ padding: 10px 10px 40px !important; text-align: center; }

.next-section		{ position: absolute; width: 100%; height: 48px; bottom: 0; background: url('/images/red-divider.png') repeat-x bottom center; }
.next-section.black	{ background: url('/images/red-divider-black.png') repeat-x bottom center; }
.next-section.gray	{ background: url('/images/red-divider-gray.png') repeat-x bottom center; }

.section						{ position: relative; padding-bottom: 40px; margin-top: -1px; }
.section .piece			{ margin: 1em 0; }
.section.black			{ background: #332e2e; }
.section.gray				{ background: #e5e5e5; }
.section .movement	{ margin-top: 2em; }
.section .logo			{ margin: auto !important; }

.copyright			{ background: #982b2b !important; }
.copyright p		{ text-align: center; font-size: 12px; padding-top: 1em; color: #fff; }

.subhead									{ padding: 12px 24px; color: #982b2b; background: #fff; border: 2px solid #982b2b; x-background: #982b2b; position: relative; margin: 20px; }
.subhead .left						{ font-size: 30px; font-family: casloncp; }
.subhead.top .left				{ font-size: 48px; line-height: 180%; }
.subhead .right						{ position: absolute; top: 25%; right: 24px; }
.subhead .social					{ display: inline; padding-left: 12px; }
.subhead .social a				{ color: #982b2b; font-size: 48px; }
.subhead .social a:hover	{ color: #231f20; }

.row					{ display: flex; flex-wrap: wrap; }
    
.textbox-wrapper { display: flex; align-items: center; justify-content: center; flex-direction: column; background: #f1f1f1; color: #111 !important; height: 100%; }
.textbox			{
  margin-right: 5px;
  padding: 40px;
  font-size: 14px;
  height: 100%;
  // color: #111;
}

.textbox a		{ font-weight: 600; color: inherit }

.help					{ padding: 1em 20px 4px; font-size: 14px; color: #1f252a; }

.gray					{ background: #f1f1f1; }
.pale					{ background: #f1f1f1; height: 100%; color: #111; }
.black				{ background: #982b2b; height: 100%; color: #f1f1f1; }
.spaced				{ margin: 20px 0; }
.space-fixer	{ margin: 0 5px; }
.bordered			{ border: 2px solid #231f20; margin: 0 4px; }

#contact .space-fixer	{ padding: 20px 10%; }

.news-item		{ padding-left: 20px; padding-right: 20px; margin: 0 0 20px; }

.movie				{ max-width: 100%; }
.fix-right		{ margin-right: 5px; }
.fix-both			{ margin: 20px 5px; }
.fix-bottom		{ margin-bottom: 20px; }

.more-info		{ line-height: 150%; }

.webinar .textbox			{ font-size: 18px; }

/* CHOOSE */

#choose				{ background: #aa251f; }
#choose header		{ background: #1f252a; padding: 1em 0; }
#choose header h1	{ font-weight: 800; text-align: center; margin: 0.5em 0; font-size: 32px; }
#choose footer		{ background: #1f252a; text-align: center; padding: 1em 0 2em; }
#choose footer h2	{ margin: 1em 0; }
#choose .main		{ margin: 2em 0; }
#choose .main h2	{ margin-top: 1em; }
#choose .form-body	{ margin: 1em 0; }
#choose .form-body label	{ color: #f2f2f2; }
#choose .form-message		{ padding: 1em 2em 2em; background: white; border-radius: 6px; border: 1px solid #1f252a; color: #1f252a; }

.network-logos		{ list-style-type: none; }
.network-logos li	{ display: inline; }
.network-logo			{ max-height: 60px; margin: 20px 30px 0 0; }
.network-logo.cw	{ padding: 15px 0; }


/* WEBINAR */

#webinar					{ max-width: 800px; }
#webinar .footer	{ max-width: 800px; }
#webinar h3				{ font-size: 24px; font-style: italic; font-weight: 500; text-align: left; text-transform: none; letter-spacing: 1px; line-height: 150%; }

#webinar .webinar-info			{ margin: 40px 0; }
#webinar .time							{ font-weight: bold; font-size: 28px; margin: 8px 0 20px; }
#webinar .dates							{ font-weight: bold; font-size: 24px; margin: 8px 0 20px; line-height: 120%; }
#webinar .cost							{ font-weight: bold; font-size: 28px; margin: 8px 0 20px; }

#webinar button		{ font-weight: bold; font-size: 32px; padding: 20px; }
#webinar h1				{ font-weight: bold; font-size: 42px; margin: 0 !important; }
#webinar h2				{ font-weight: 500; font-size: 24px; margin: 0 0 20px !important; text-transform: none; }

#webinar .call-to-action	{ font-weight: 700; font-size: 28px; line-height: 120%; }
#webinar .call-to-action .btn	{ font-size: 32px; }
#webinar .call-to-action i		{ margin: 8px 0; }

/* INVITE */

.invite				{ background: #5c7a99 url('/images/invite-background.jpg') repeat-y; background-size: 30%; font-size: 32px; font-weight: 500; text-transform: uppercase; }
.invite .col-xs-8	{ text-align: center; }
.invite .when, .invite .where	{ margin: 1em 0; }
.invite smaller		{ font-size: 18px; text-transform: lowercase; }
.invite h1			{ font-weight: 800; margin-top: 1em; }
.invite h2			{ font-weight: 300; text-transform: lowercase; margin: 2em 0; }
.invite .line-1		{ font-size: 64px; }
.invite .line-2		{ font-size: 28px; font-weight: 300; }
.invite .line-3		{ font-size: 120px; }
.invite .where p	{ margin: 1em 0; }
.invite button		{ font-size: 18px; font-weight: 800; }

